k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: beatzy
  labels:
    app.kubernetes.io/part-of: beatzy
